Fixed list template grid alignment

--- a/scss/plugin-templates/_list.scss
+++ b/scss/plugin-templates/_list.scss
@@ -1,9 +1,9 @@
 .list-container {
-
+    @include make-row();
 }
 
 .list-item {
-    @include make-row();
+    @include make-col-ready();
 
     & + .list-item {
         @if $app-content-plugin-list-item-spacing {
